# spellbook

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
docs/: design.md
src/spellbook/: __init__.py  agents.py  cli.py  index.py  installer.py  schema.py
src/spellbook/assets/: canonical_entities.yaml
src/spellbook/assets/.claude/: settings.json
src/spellbook/assets/.claude/agents/: ai-engineer.md  architect.md  archivist.md  backend.md  data-engineer.md  devops.md  frontend.md  general.md  librarian.md  quant-dev.md  researcher.md  specter.md  trader.md
src/spellbook/assets/.claude/context/: orchestrator.md
src/spellbook/assets/.claude/hooks/: pretool_task.py  session_capture.py  stop.sh  subagent_start.py  user_prompt_submit.py
src/spellbook/assets/.claude/references/: document-standards.md  entity-guidelines.md  orchestrator.md
src/spellbook/assets/.claude/scripts/: rebuild_index.py
src/spellbook/assets/agents/: ai-engineer.md  archivist.md  data-engineer.md  librarian.md  quant-dev.md  researcher.md  specter.md  trader.md
src/spellbook/assets/scripts/: rebuild_index.py
src/spellbook/assets/templates/: CLAUDE.md.template
